# elephant-coder

./: ARCHITECTURE.md  BENCHMARK_PAPER.md  PLAN.md  SPEC.md  pyproject.toml  requirement.txt
.benchmarks/: DUMMY_OOP_BENCHMARK.md  tasks_dummy_cross_module_v1.json  tasks_dummy_event_mesh_v1.json  tasks_dummy_layered_inheritance_v1.json  tasks_v1.json  (+4 more)
.elephant-coder/realworld/scratch_repo_20260209T183119Z/: README.md  package.json  pyproject.toml  requirements-dev.txt  run_hello.py  tsconfig.json
.elephant-coder/realworld/scratch_repo_20260209T183119Z/.elephant-coder/: config.md
.elephant-coder/realworld/scratch_repo_20260209T183119Z/.elephant-coder/runs/: run_1f24ad7ddb49.json  run_8f15396de06c.json  run_b6e4f9656fef.json  run_c092a2e68c6f.json  run_cb81932f49be.json  run_e63de8117147.json
.elephant-coder/realworld/scratch_repo_20260209T183119Z/.elephant-coder/sessions/: realworld_scratch_20260209T183119Z_scratch_cli_03_baseline_r1.jsonl  realworld_scratch_20260209T183119Z_scratch_cli_03_elephant_r1.jsonl  realworld_scratch_20260209T183119Z_scratch_python_01_baseline_r1.jsonl  realworld_scratch_20260209T183119Z_scratch_python_01_elephant_r1.jsonl  realworld_scratch_20260209T183119Z_scratch_readme_02_baseline_r1.jsonl  realworld_scratch_20260209T183119Z_scratch_readme_02_elephant_r1.jsonl
.elephant-coder/realworld/scratch_repo_20260209T183119Z/src/hello_app/: main.py
.elephant-coder/realworld/scratch_repo_20260209T183119Z/src/hello_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
.elephant-coder/realworld/scratch_repo_20260209T183119Z/tests/: test_smoke.py
(+1692 files in other folders)
