[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-app"
version = "0.1.0"
description = "A simple hello world app"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "unittest-xml-reporting>=3.2.0",
]
